--- a/localisation/english/ww1_romania_l_english.yml
+++ b/localisation/english/ww1_romania_l_english.yml
@@ -19,8 +19,11 @@ ROM_domestic_air_manufactor:0 "Cerchez and Co"
 ROM_domestic_air_manufactor_desc:0 "Domestic production allows us to fulfill the exact needs of our military. We should turn to Cerchez and Co, a Romanian airplane manufacturer in danger of bankruptcy. If the government purchases them we might just be able to build ourself an airforce all by ourselves."
 ROM_sec:0 "Modify §YRomanian Army§! by\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n£attacker_speed_texticon Division Speed: §G+5.00%§!"
 ROM_the_southern_wall:0 "The Southern Wall"
+ROM_the_southern_wall_desc:0 "With chances of war with Bulgaria likely, a large system of fortifications along the border is sorely needed. With most of the border running along the Danube, there should be no issue keeping the enemy at bay."
 ROM_stragetic_fortifications_on_the_southern_border:0 "Fortify Key Cities on the Bulgarian Border"
+ROM_stragetic_fortifications_on_the_southern_border_desc:0 "We cant afford to man the entire border with Bulgaria, therefore only enforcing key locations would be more defensible."
 ROM_complete_the_defense_of_the_southern_carpathians:0 "Increase Defenses in the Southern Carpathians"
+ROM_complete_the_defense_of_the_southern_carpathians_desc:0 "The biggest threat to national security are the Central Powers. Fortifying the Carpathian mountain range would create a meatgrinder, enabling us to withstand the Austro-German armies."
 ROM_strike_swift_and_hard:0 "The 'Z' Hypothesis"
 ROM_strike_swift_and_hard_desc:0 "The Z Hypothesis is a plan developed by the General Staff, where in the event of war with Austria and Bulgaria, the bulk of the army shall advance into Transylvania, while a token force will hold off the Bulgarians until Russian reinforcements. Should all go according to plan,Transylvania will be liberated and Bulgaria knocked out of the war." 
 ROM_sway_the_vote_of_soldiers:0 "Sway the Vote of Soldiers"
@@ -50,7 +53,7 @@ ROM_harmonization_of_romanian_society:0 "Harmonisation of Romanian Society"
 ROM_harmonization_of_romanian_society_desc:0 ""
 ROM_junimea_ideas:0 "Junimean Ideas"
 ROM_geniocracy:0 "A Government of Intellectuals"
-ROM_geniocracy_desc:0 "Its clear the masses cannot be trusted to run the country, being easily swayed by populist firebrands. "
+ROM_geniocracy_desc:0 "Its clear the masses cannot be trusted to run the country, being easily swayed by populist firebrands, while the current government is filled with incompetent fools who only gained their positions through bribery and cronyism. Only an elite group of intellectuals, picked through a meritocratic system, are fit to rule."
 ROM_install_a_royal_dictatorship:0 "The Kings Government"
 ROM_install_a_royal_dictatorship_desc:0 "The time for limited parliamentarianism in Romania has ended. King Carol and his advisors have assumed the vessels of government from the political parties, finally through with their squabbling. What this means for Romania is anyone's guess."
 ROM_pragmatic_politics:0 "Reunion of the Conservative Parties"
@@ -96,7 +99,7 @@ ROM_towards_a_socialist_economy:0 "Transitioning Economy"
 ROM_sa_faci_din_rahat_bici:0 "Sa Faci Din Rahat Bici"
 ROM_sa_faci_din_rahat_bici_desc:0 "We don't have the steel of Germany or the vast population of Russia, but our economy still has the foundations for modernization. Welcoming the advice of industrial experts from foreign countries will help us speed up the growth of our small, but important industrial sector."
 ROM_fixing_the_railways:0 "Fixing the Railways"
-ROM_fixing_the_railways_desc:0 "Romania's railway lines are small and undeveloped"
+ROM_fixing_the_railways_desc:0 "Romania's railway lines are small and undeveloped. While this makes it difficult for foreign armies, its nothing but a hindrance in peacetime. a new system of railway lines is needed for the movement of goods and troops."
 ROM_the_conservative_conservatives:0 "The Conservative in the Conservative Party"
 ROM_the_conservative_conservatives_desc:0 "The PC has started to lose its way as of late. What started out as a purely conservative party has been morphed into a mess of contradictionary left and right wing positions on various issues, with little coherence. Luckily, the appointment of Delavrancea has given us a chance to make the conservative party conservative again."
 ROM_develop_the_north:0 "The Forgotten Half of the Country"
@@ -106,15 +109,17 @@ ROM_prahova_valley_desc:0 "The Prahovan Valley region is where the bulk of Roman
 ROM_his_majestys_influence:0 "His Majesty's Influence"
 ROM_his_majestys_influence_desc:0 "While Romania does have a parliament, King Carol holds much influence over it, and his whims and displeasure guides the majority of its activity. He is a strong monarch in all regards and his opinion is valued as much if not more than elected officials. Keeping him happy is difficult as he has the power to dismiss the current government. This power is excercised often simply due to his preference for rotating parties, which has worked for now."
 ROM_crush_left_wing_protesters:0 "End the Liberal Boycott"
-ROM_crush_left_wing_protesters_desc:0 "Many in the left are refusing to engage with Carp's new government. While we'd usually be fine with these retards fucking off, we're gonna need them to get on board for now. Through some shady manuevers, we should be able to put an end to this boycott."
+ROM_crush_left_wing_protesters_desc:0 "Many in the left are refusing to engage with Carp's new government. While we'd usually ignore these rabble rousers, we're gonna need them to get on board for now. Through some shady manuevers, we should be able to put an end to this boycott."
 ROM_law_on_mobilization:0 "Law On Mobilization"
 ROM_law_on_mobilization_desc:0 "As part of the Army's expansion, a new law expanding conscription is needed. The Prime Minister shall put forward a bill to the Romanian Parliament."
 ROM_study_enemy_cartography:0 "Study Enemy Cartography"
 ROM_study_enemy_cartography_desc:0 "The General Staff has requested maps to be made and aquired, of strategic locations in neighbouring countries, especially in the Carpathians.This will give us an advantage over our enemies."
 ROM_general_directorate_of_munitions:0 "The General Directorate of Munitions"
+ROM_general_directorate_of_munitions_desc:0
 ROM_expansion_of_the_officer_corp:0 "Expand the Officer Corps"
+ROM_expansion_of_the_officer_corp_desc:0 "The number of Officers, both with commissions and non-commissioned, is pitifully small. 
 ROM_build_a_domesic_arms_industry:0 "An Issue of National Security"
-ROM_beggers_cant_be_chosers:0 "Mass Importation of Foreign Equipment"
+ROM_beggers_cant_be_chosers:0 "Beggars Can't Be Choosers"
 ROM_a_common_divison_structure:0 "A Common Division Structure"
 ROM_restructure_the_high_command:0 "Reshuffle the High Command"
 ROM_training_schools:0 "Open Up Training Schools"
@@ -126,7 +131,7 @@ ROM_decentralization:0 "Decentralization"
 ROM_revive_the_committee_on_the_agrarian_question:0 "Committee on the Agrarian Question"
 ROM_revive_the_committee_on_the_agrarian_question_desc:0 "It is high time that the land reform is finished. Countless laws proposed, none passed, yet with the new influence we hold we may have a chance yet. The landholding gentry are sure to mutter and whine, but they knew this was inevitable as soon as our mandate was secured. The people deserve a greater piece of the pie. Our efforts are sure to cause waves through future generations. Let the committee be organized, for a better Romania."
 ROM_decentralization_desc:0 "Romania is full of many different diverse communities with different needs. Local governments will understand their peoples needs best, and we should empower then."
-ROM_the_burdens_they_endure:0 "Special Privilege to Soldiers"
+ROM_the_burdens_they_endure:0 "Special Privileges to Soldiers"
 ROM_the_burdens_they_endure_desc:0 "Being a soldier is the hardest job one can have. Their devotion to Romania is unmatched, and they are the backbone of the state. We must reward our loyal soldiers with additional benefits."
 ROM_moderate_pnl:0 "The §mPCD§! has too much say in our coalition to make such drastic changes"
 ROM_populist_rhetoric:0 "Populist Rhetoric"
