--- a/localisation/english/ww1_romania_l_english.yml
+++ b/localisation/english/ww1_romania_l_english.yml
@@ -545,7 +545,12 @@ ROM_claims_on_morava:0 "Claims on [809.GetName]"
 ROM_claims_on_morava_desc:0 "[809.GetName] is a province that has a large Romanian minority. We need to encompass all Romanians into Greater Romania, România Mare."
 ROM_expansion_of_the_coal_industry:0 "Expansion of the Romanian Coal Industry"
 ROM_expansion_of_the_coal_industry_desc:0 "The Romanian coal industry should be ramping up by now, with all the new territories Romania has conquered, especially near the Carpathian Mountains, an area rich with coal."
+ROM_ignore_the_entente_protests:0 "Ignore the Entente's Protests"
+ROM_remove_soviet_hungarian_elements_in_alfold:0 "Remove Soviet Elements in [154.GetName]"
+
+
 ## -- TOOLTIPS -- ##
+ROM_enables_secret_ending.tt:0 "Enables alternative option to keep Hungary in the event chain"
 hungarian_romanian_war_winner:0 "Winner of the Hungarian-Romanian War"
 hungarian_romanian_war_loser:0 "Loser of the Hungarian-Romanian War"
 ROM_modify_supress_hung.tt:0 "§WModify §W§YSuppressed Hungarian Language§Y§W by \n£manpower_texticon Local manpower:§W§G +10%§G§W"
