--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -1408,9 +1408,9 @@
  VICTORY_POINTS_1291: "Alor Setar"
  VICTORY_POINTS_4312: "Nakhon Si Thammarat"
  VICTORY_POINTS_12289: "Fredericton"
- VICTORY_POINTS_9480: "Sudbury"
- VICTORY_POINTS_12663: "Regina"
- VICTORY_POINTS_10611: "Saskatoon"
+ VICTORY_POINTS_9467: "Sudbury"
+ VICTORY_POINTS_12603: "Regina"
+ VICTORY_POINTS_4739: "Saskatoon"
  VICTORY_POINTS_3706: "Calgary"
  VICTORY_POINTS_1323: "Prince George"
  VICTORY_POINTS_10725: "Artvin"
@@ -1938,6 +1938,26 @@
  VICTORY_POINTS_3452: "Elisavetgrad"
  VICTORY_POINTS_3376: "Yefremov"
  VICTORY_POINTS_7477: "Krasnovodsk"
+ VICTORY_POINTS_12582: "Sault Ste. Marie"
+ VICTORY_POINTS_736: "Prince Albert"
+ VICTORY_POINTS_12145: "Brandon"
+ VICTORY_POINTS_12688: "Portage la Prairie"
+ VICTORY_POINTS_1262: "Lethbridge"
+ VICTORY_POINTS_7853: "Kamloops"
+ VICTORY_POINTS_1799: "Prince Rupert"
+ VICTORY_POINTS_749: "St. Catherines"
+ VICTORY_POINTS_3763: "Hamilton"
+ VICTORY_POINTS_774: "Kitchener"
+ VICTORY_POINTS_9667: "Windsor"
+ VICTORY_POINTS_722: "London"
+ VICTORY_POINTS_9711: "Sarnia"
+ VICTORY_POINTS_9585: "Barrie"
+ VICTORY_POINTS_11569: "Peterborough"
+ VICTORY_POINTS_3605: "Kingston"
+ VICTORY_POINTS_7291: "Trois Rivières"
+ VICTORY_POINTS_1424: "Moncton"
+ VICTORY_POINTS_4285: "Saint John"
+ VICTORY_POINTS_4430: "Sydney"
 
  PETROGRAD_PROV: "Petrograd"
  LENINGRAD_PROV: "Leningrad"
