--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -737,7 +737,7 @@
  STATE_736: "Istria"
  STATE_737: "Bismarck"
  STATE_738: "Aru Islands"
- STATE_739: "Haida Gwaii"
+ STATE_739: "Queen Charlotte Islands"
  STATE_740: "Vancouver Island"
  STATE_741: "Sud-Est du Cambodge"
  STATE_742: "Karategin"
