working on tunisia

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10325,7 +10325,25 @@
  TUN_form_destour_desc:0 "Tunisia's destiny is to establish itself as an independent state. At least, that's what some Tunisian youth think. The government's position of supporting popular forces provoked a democratic momentum in the country leading to the formation of an organized autonomist political group."
 
  TUN_tunis_al_fatat:0 "Tunis Al-Fatat"
+ TUN_independence_route:0 "§RThis ahistorical branch will focus our efforts into independence, no matter the cost !§!"
  TUN_tunis_al_fatat_desc:0 "The Tunisian spirit of resistance was strengthened in response to the dictatorial and bloodthirsty policy of France. The Tunisian people are determined to take the most direct route to freedom, whatever the price to pay or the blood to be shed."
+
+ TUN_reverse_schiaffo_di_tunisi:0 "Reverse Schiaffo Di Tunisi"
+ TUN_reverse_schiaffo_di_tunisi_desc:0 "Italy has always considered Tunisia as part of its zone of influence. The territory was also a source of strong disputes with Paris who fought against each other until 1881 for control of the region. Defeated, Italy could have an interest in supporting Tunisian independence which would open up a new market, especially since the two countries share a large population."
+
+ TUN_moncef_bey_empowered:0 "([TUN.getFlag])§YMoncef Bey§! will support the nationalist movement."
+ TUN_support_muhammad_vii:0 "Support Muhammad VII"
+ TUN_support_muhammad_vii_desc:0 "Naceur Bey's son, Moncef, is a great supporter of the Tunisian national struggle. Opposed to the protectorate, he could take the lead in the opposition movement that we are forming alongside already popular figures like Thâalbi or Sfar."
+
+TUN_revoke_la_marsa_convention:0 "Revoke la Marsa Convention"
+TUN_revoke_la_marsa_convention_desc:0 "The Marsa Convention linked Tunisia to France in total economic supervision. By breaking this agreement, we will regain control of part of our economy, but also of the weight of our national debt. In the short term, the economic and social situation is likely to be complex."
+
+TUN_debt_council:0 "Commission Financière Internationale"
+TUN_restore_the_CFI:0 "Restore the CFI"
+TUN_restore_the_CFI_desc:0 "The international financial commission managed our debt before the French intervention. This organization can be the new guarantor of our stability while preserving our independence. It will not be as generous a creditor as France, but it will provide a certain stability and allow us to continue our reforms."
+
+TUN_reach_germans:0 "Reach Germans"
+TUN_reach_germans_desc:0 "The German Empire is the greatest power on the European continent and a natural enemy of France. It is likely that they have an interest in supporting us in our struggle for independence."
 
  TUN_sadiki_high_school_reform_comission:0 "Sadiki Reform Comission"
  TUN_sadiki_high_school_reform_comission_desc:0 "The Tunisian education system is extremely fragile, the victim of strong discrimination and the absence of a common school program. In addition, teaching in Arabic is of a much lower quality than that in French, accentuating the educational gap among indigenous populations. Abdeljelil Zaouche is the cornerstone of this council, ultimately intended to reform the entire education system."
