--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -3054,6 +3054,11 @@ TUN_memory_of_gabes_desc:0 "The memory of the reform of the penal code is still 
 TUN_powerful_landlords:0 "Powerful Landlords"
 TUN_powerful_landlords_desc:0 "Part of the colonial elite owns most of Tunisia's arable land. This situation plunges farmers into poverty and causes indignation among local populations."
 
+comission_financiere_internationale:0 "Comission Financière Internationale"
+
+TUN_debts:0 "Tunisian Debt"
+TUN_debts_desc:0 "After the revocation of the Marsa agreement, Tunisia must assume its debt which was previously guaranteed by the Bank of France. This situation makes loans from international bodies difficult, limiting our investment capacity in the territory, while depriving the population."
+
 tunis_tramway_company:0 "Tunis Tramway Company"
 societe_du_djebel_djerissa:0 "Société du Djebel de Djerissa"
 
