--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -2285,6 +2285,45 @@ FRA_you_can_change_the_prime_minister_later:0 "A §YDecision§! will remain avai
  ww1_france.501.d:0 "At the heart of the protest movements, Gabès was the target of a series of devastating riots. Many businesses were looted and several French administrators were beaten, sometimes to death in the streets by extremist natives. The police had to intervene with the help of armed forces to disperse the crowds. Several shots were necessary to prevent excesses, causing several dozen deaths among the rioters."
  ww1_france.501.a:0 "Peace, at last!"
 
+ ww1_france.502.t:0 "Agitation Among the Caïds"
+ ww1_france.502.d:0 "Following the forced reforms initiated by the Resident General and more broadly by France, a large part of the population is suffering. If modernization has allowed the construction of new roads, hospitals and schools, it has also plunged Tunisians into poverty by multiplying the price of foodstuffs, while erasing their national identity and their sovereignty. This agitation reaches the Caïds and the Sheiks, that is to say the local administrators and prefects, who discreetly support the anger of the population. The agitation caused by the reform of the judicial system was one too many, prompting a large number of Tunisians to act."
+ ww1_france.502.a:0 "We must proceed with caution"
+
+ ww1_france.503.t:0 "A Letter from Moncef Bey"
+ ww1_france.503.d:0 "Through a letter from Moncef Bey, son of Bey Naceur Bey of Tunisia, we have just learned that a resistance movement was forming in Tunisia. This group concentrates several minor formations already known, such as the “young Tunisians”, but also the “al-Ittihad al-Islami” and the “Tunis al-fatat”. The latter call for support from Italy if “France does not recognize the sovereignty of Tunisians on their territory”. Tunisia has always been part of our zone of influence, supporting them, even modestly, would be to our advantage."
+ ww1_france.503.a:0 "We can send some guns"
+ ww1_france.503.b:0 "They will have the support of Tunisian-Italians"
+ ww1_france.503.c:0 "We dont care"
+
+ ww1_france.504.t:0 "Full Support from [ITA.getName]"
+ ww1_france.504.d:0 "Italy has agreed to support us through their influence on our Italian population. This is an important step in establishing a real balance of power for our independence. They also sent several thousand rifles in convoys, valuable resources that boost the morale of the troops."
+ ww1_france.504.a:0 "Excellent!"
+
+ ww1_france.505.t:0 "Support from [ITA.getName]"
+ ww1_france.505.d:0 "Italy has agreed to support us through their influence on our Italian population. This is an important step in establishing a real balance of power for our independence."
+ ww1_france.505.a:0 "Good"
+
+ ww1_france.506.t:0 "[ITA.getName] Ignored Us"
+ ww1_france.506.d:0 "Italy did not respond to our letter, completely ignoring our requests. Obviously, they have abandoned the idea of ​​having influence over West Africa. We will have to struggle without them."
+ ww1_france.506.a:0 "Arf..."
+
+ ww1_france.507.t:0 "Tunisia Takes Charge of its Debt"
+ ww1_france.507.d:0 "The Tunisian government of [TUN.getLeader] met with Resident General Gabriel Alapettite to propose the revocation of the Marsa convention. This agreement allowed Tunisia to load its debt on France and obtain new investment avenues. The Bey, accompanied by his son Moncef, explained that the good economic situation in Tunisia allowed the country to gain autonomy in its financial management."
+ ww1_france.507.a:0 "This will alleviate our debt!"
+
+ ww1_france.508.t:0 "Anti-French Activities in Tunisia"
+ ww1_france.508.d:0 "Through a letter from Moncef Bey, son of Bey Naceur Bey of Tunisia, we have just learned that a resistance movement was forming in Tunisia. This group concentrates several minor formations already known, such as the “young Tunisians”, but also the “al-Ittihad al-Islami” and the “Tunis al-fatat”. The latter call for support from Germany if “France does not recognize the sovereignty of Tunisians on their territory”. "
+ ww1_france.508.a:0 "We can send some guns"
+ ww1_france.508.c:0 "We dont care"
+
+ ww1_france.509.t:0 "Support from [GER.getName]"
+ ww1_france.509.d:0 "[GER.getName] sent several thousand rifles in convoys, valuable resources that boost the morale of the troops."
+ ww1_france.509.a:0 "Good"
+
+ ww1_france.510.t:0 "[GER.getName] Ignored Us"
+ ww1_france.510.d:0 "[GER.getName] did not respond to our letter, completely ignoring our requests. Obviously, they have abandoned the idea of ​​having influence over West Africa. We will have to struggle without them."
+ ww1_france.510.a:0 "Arf..."
+
  #BELGIUM
  ww1_belgium.1.t: "Rape of Belgium"
  ww1_belgium.1.desc: "Reports have come in describing the outright barbaric treatment of Belgian civilians by Germans. Anticipating guerrilla attacks from francs-tireurs who don’t actually exist, German commanders have taken civilian hostages as they pass through towns and villages, then shoot the hostages in groups whenever German soldiers are killed.\n\nBlamed on shadow guerrillas, the usual stray bullets and friendly fire incidents have already resulted in hundreds of murdered Belgians, and for reasons that remain unclear, the historic city and university of Louvain were burned.\n\nJust like looting and murder, rape was widespread."
