mobilize the sheiks + proper industrial concern blocker

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10345,6 +10345,9 @@ TUN_restore_the_CFI_desc:0 "The international financial commission managed our d
 TUN_reach_germans:0 "Reach Germans"
 TUN_reach_germans_desc:0 "The German Empire is the greatest power on the European continent and a natural enemy of France. It is likely that they have an interest in supporting us in our struggle for independence."
 
+TUN_mobilize_the_sheiks:0 "Mobilize the Sheiks"
+TUN_mobilize_the_sheiks_desc:0 "Sheikhs are powerful local prefects, popular with their towns. Their support in mobilizing the population and its unity for the national cause is essential, they are in charge of transmitting instructions and organizing movements and collective actions."
+
  TUN_sadiki_high_school_reform_comission:0 "Sadiki Reform Comission"
  TUN_sadiki_high_school_reform_comission_desc:0 "The Tunisian education system is extremely fragile, the victim of strong discrimination and the absence of a common school program. In addition, teaching in Arabic is of a much lower quality than that in French, accentuating the educational gap among indigenous populations. Abdeljelil Zaouche is the cornerstone of this council, ultimately intended to reform the entire education system."
 
