adding most of independance path + ugly moncef portrait

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -2328,6 +2328,28 @@ FRA_you_can_change_the_prime_minister_later:0 "A §YDecision§! will remain avai
  ww1_france.510.d:0 "[GER.getName] did not respond to our letter, completely ignoring our requests. Obviously, they have abandoned the idea of ​​having influence over West Africa. We will have to struggle without them."
  ww1_france.510.a:0 "Arf..."
 
+ ww1_france.511.t:0 "Demands from Béchir Sfar"
+ ww1_france.511.d:0 "Administrator Béchir Sfar collected the demands of Tunisian nationalist organizations against the French authorities. In a letter there is a long appendix of the excesses of the colonial state, both through deprivations of liberty and through the alleged exploitation of the population for the benefit of the French colonists. The demands are simple: Grant total autonomy to Tunisia in exchange for guarantees and a leading strategic partnership. It seems obvious that this request would not benefit us, we could simply refuse it and prepare for a series of riots."
+ ww1_france.511.a:0 "We cant allow this to happen"
+ ww1_france.511.b:0 "This might be the best for all of us"
+
+ ww1_france.512.t:0 "France Refused!"
+ ww1_france.512.d:0 "The French government has ruled out the idea of ​​Tunisian independence, citing the Treaty of Bardo and French commitments intended to protect Africa. We're going to have to force their hand."
+ ww1_france.512.a:0 "As expected..."
+ TUN_can_revolt:0 "Tunisian Population Support a Coup"
+
+ ww1_france.513.t:0 "France Accepted!"
+ ww1_france.513.d:0 "Contrary to what we had thought, the French government accepted the idea of ​​strategic independence for Tunisia. The two countries would remain close economic and military allies, but would now maintain interstate relations. This is a big surprise and a huge victory for our people."
+ ww1_france.513.a:0 "Victory!"
+
+ ww1_france.514.t:0 "Situation in Tunisia"
+ ww1_france.514.d:0 "The situation in Tunisia has become extremely tense since the rural judicial reform carried out by Resident General Gabriel Lapetite. In a few months, fierce resistance groups were formed throughout the country, mobilizing peasant masses against the existing order. The situation became even more tense when we refused Tunisian independence, the natives feel oppressed and intend to make us pay for it. According to our intelligence agencies, an insurrection could break out in about a month."
+ ww1_france.514.a:0 "Evacuate the Resident General and prepare the troops"
+
+ ww1_france.515.t:0 "Tunisian Revolution"
+ ww1_france.515.d:0 "Long before we anticipated it, independence forces struck in the heart of the country, in Tunis. The rebel troops seized the courts, the council and the residence of the current Bey Naceur who offered no resistance. There, the rebels named Naceur's son, Moncef, Bey of Tunis. Our scattered troops were not able to repel the attackers, especially since the population is clearly hostile to us. We were forced to retreat."
+ ww1_france.515.a:0 "We cant let them go like this!"
+
  #BELGIUM
  ww1_belgium.1.t: "Rape of Belgium"
  ww1_belgium.1.desc: "Reports have come in describing the outright barbaric treatment of Belgian civilians by Germans. Anticipating guerrilla attacks from francs-tireurs who don’t actually exist, German commanders have taken civilian hostages as they pass through towns and villages, then shoot the hostages in groups whenever German soldiers are killed.\n\nBlamed on shadow guerrillas, the usual stray bullets and friendly fire incidents have already resulted in hundreds of murdered Belgians, and for reasons that remain unclear, the historic city and university of Louvain were burned.\n\nJust like looting and murder, rape was widespread."
