--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10348,6 +10348,13 @@ TUN_reach_germans_desc:0 "The German Empire is the greatest power on the Europea
 TUN_mobilize_the_sheiks:0 "Mobilize the Sheiks"
 TUN_mobilize_the_sheiks_desc:0 "Sheikhs are powerful local prefects, popular with their towns. Their support in mobilizing the population and its unity for the national cause is essential, they are in charge of transmitting instructions and organizing movements and collective actions."
 
+TUN_polarize_young_tunisians:0 "Polarize the \"Jeunes Tunisiens\""
+TUN_polarize_young_tunisians_desc:0 "The behavior of the colonial government pushed many young Tunisians to become extremists and ready to fight for the national cause. The forced reforms have plunged many of them into poverty. Their combativeness will be our strength."
+
+TUN_sfax_plaidoyer:0 "Sfar Plaidoyer"
+TUN_sfax_plaidoyer_desc:0 "Administrator Béchir Sfar collected the legitimate demands of the Tunisian people against the French authorities. In a letter there is a long appendix of the excesses of the colonial state, both through deprivations of liberty and through the exploitation of the population for the benefit of the French colonists. The demands are simple: Grant total autonomy to Tunisia in exchange for guarantees and a leading strategic partnership."
+if_they_refuse:0 "§RIf they dont approve our plan :§!"
+
  TUN_sadiki_high_school_reform_comission:0 "Sadiki Reform Comission"
  TUN_sadiki_high_school_reform_comission_desc:0 "The Tunisian education system is extremely fragile, the victim of strong discrimination and the absence of a common school program. In addition, teaching in Arabic is of a much lower quality than that in French, accentuating the educational gap among indigenous populations. Abdeljelil Zaouche is the cornerstone of this council, ultimately intended to reform the entire education system."
 
