--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -3495,6 +3495,7 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
 
  # TUNISIA
  TUN_naceur_bey:0 "Naceur Bey"
+ TUN_moncef_bey:0 "Moncef Bey"
  TUN_ali_bash_hamba:0 "Ali Bash Hanba"
  TUN_bechir_sfar:0 "Béchir Sfar"
  TUN_abdekjelil_zaouche:0 "Abdeljelil Zaouche" 
