--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -50,6 +50,9 @@
 
  FRA_support_in_polish_war:0 "Intervention in the Polish Soviet War"
  FRA_support_in_polish_war_desc:0 "With the defeat of §Y[GER.GetFlag][GER.getName]§!, we can finally support Anti Bolshevik Forces in eastern Europe.\n\nShipments of §Yguns§!, §Yartillery§! and §Ymore§! are now at our disposal.  \n\nAvailable Shipments: [?SRA_available_shipments|+0]\n\nAvailable shipments will increase by §Ytwo§! every month."
+
+ TUN_kick_french_administrators:0 "Kick French Administrators"
+ TUN_kick_french_administrators_desc:0 "The population is sufficiently prepared and energetic to carry out a popular revolution operation against French power. The meager local reserves will not be able to stop rapid and organized action. The objective will be to take control of the institutions and of Tunis in order to appoint Mohamed el-Moncef Bey and to break the Bardo agreement, formalizing the end of the protectorate."
  
  send_equipment_to_FROM_rifles:0 "Send Rifles to [FROM.getName]"
  send_equipment_to_SRA_fighter:0 "Send Fighters to [FROM.getName]"
