Tweak Nat France interwar
no more sizo focus

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -7682,12 +7682,8 @@
  NFA_partisan_suppression_desc:0 "Some of us are red! They are trying to break us down from within. All traitors must be confirmed and eliminated."
  NFA_above_all_the_losses:0 "Above All the Losses"
  NFA_above_all_the_losses_desc:0 "The civil war is over. For now."
- NFA_restoration_of_the_continental_system:0 "Restoration of the Continental System"
- NFA_restoration_of_the_continental_system_desc:0 ""
  NFA_the_monarchy_restored:0 "The Monarchy Restored"
  NFA_the_monarchy_restored_desc:0 ""
- NFA_our_natural_borders:0 "Our Natural Borders"
- NFA_our_natural_borders_desc:0 ""
  NFA_a_true_democracy:0 "A True Democracy"
  NFA_a_true_democracy_desc:0 ""
  NFA_the_great_exile:0 "The Great Exile"
@@ -7708,6 +7704,10 @@
  NFA_expand_the_citizenship_desc:0 ""
  NFA_rescue_the_french:0 "Rescue the French"
  NFA_rescue_the_french_desc:0 "The French are suffering from the oppression of the false regime of socialists. We must rescue them and take them to cradle of [ROOT.GetNameDef]."
+ NFA_france_undividable:0 "France Undividable"
+ NFA_france_undividable_desc:0 ""
+ NFA_restore_loyalist_parliament:0 "Restore the Parliament"
+ NFA_restore_loyalist_parliament_desc:0 ""
 
  france_socialist_focus:0 "Socialist France Focus Tree"
  FRC_the_workers:0 "The Workers"
