--- a/localisation/english/ww1_romania_l_english.yml
+++ b/localisation/english/ww1_romania_l_english.yml
@@ -550,7 +550,7 @@ ROM_remove_soviet_hungarian_elements_in_alfold:0 "Remove Soviet Elements in [154
 
 
 ## -- TOOLTIPS -- ##
-ROM_enables_secret_ending.tt:0 "Enables alternative option to keep Hungary in the event chain"
+
 hungarian_romanian_war_winner:0 "Winner of the Hungarian-Romanian War"
 hungarian_romanian_war_loser:0 "Loser of the Hungarian-Romanian War"
 ROM_modify_supress_hung.tt:0 "§WModify §W§YSuppressed Hungarian Language§Y§W by \n£manpower_texticon Local manpower:§W§G +10%§G§W"
@@ -620,7 +620,6 @@ event_chain_hungary.tt:0 "§WThis will start an §W§Revent chain§R§W for the 
 ROM_txp.tt:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.15§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y-10.0%§!\n£stability_texticon Stability: §G+5.00%§!"
 ROM_end_foreign_purchases:0 "Reduce Foreign Equipment Purchases"
 ROM_mife2.tt:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §G-0.15§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y-20.0%§"
-
 ROM_ice.tt:0 "Modify §YRomanian Economy§! by\n£consumer_goods_texticon Consumer Goods Factories factor: §Y-5.0%§!"
 ROM_edd.tt:0 "Modify §YRomanian Economy§! by\n£dockyard_output_texticon Dockyard Output: §G+5.00%§!"
 ROM_agricultural_knowledge.tt:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.05§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y-7.0%§!"
@@ -678,6 +677,10 @@ ROM_tbotr.tt:0 "Modify §YRomanian Economy §Y§Wby:\n£consumer_goods_texticon 
 ROM_has_war_hungarian.tt:0 "§WThis focus will be §W§Gautocompleted§G§W once the Romanian-Hungarian war starts.§W"
 ROM_armistice_of_focsani_completed:0 "Signed the Armistice of Focsani"
 this_will_lead_war_hungary.tt:0 "§WThis will lead to §W§Rwar§R§W with Hungary"
+ROM_enables_secret_ending.tt:0 "§WEnables alternative option to keep [HUN.GetNameWithFlag] in the §W§Revent chain§R§W"
+if_they_accept.tt:0 "If they accept:"
+if_they_refuse.tt:0 "If they refuse:"
+## TOOLTIPS_END ##
 ### -- EVENTS -- ##
 ww1_romania.78.t:0 "The 'Swamp' Demand Protection"
 ww1_romania.78.d:0 "The so-called swamp of Romanian politics, consisting of unelected appointed government positions, often in which jobs are given to friends and family, are opposing our governments campaign to help reduce corruption in government. Those in the PNL in particular are demanding protection from these efforts, and are threatening to oppose our government if we don't"
@@ -1051,8 +1054,22 @@ ww1_romania.113.a:0 "Keep suppressing!"
 ww1_romania.114.t:0 "Allies demand our army to retreat out of Hungary"
 ww1_romania.114.d:0 "The Entente demands the end to our occupation of the Hungarian lands."
 ww1_romania.114.a:0 "Fine."
+ww1_romania.114.b:0 "We won't end the occupation."
+ww1_romania.115.t:0 "[ROM.GetName] proposes an alliance"
+ww1_romania.115.d:0 "[ROM.GetName] proposes an alliance against any outside threats. The nation, being unstabilized by our victory in the war against them, has been couped by socialists and want to ally with us."
+ww1_romania.115.a:0 "Come on in!"
+ww1_romania.115.b:0 "We haven't forgotten."
+ww1_romania.116.t:0 "[HUN.GetName] refuses an alliance"
+ww1_romania.116.d:0 "The delegate from Hungary said to us that they will not be signing an alliance with us."
+ww1_romania.116.a:0 "Fools..."
+ww1_romania.115.c:0 "How about just peace for now?"
+ww1_romania.117.t:0 "[FROM.GetName] demands [78.GetName] for civilian factories"
+ww1_romania.117.d:0 "[FROM.GetName] offers a deal to us: they give us use of 5 of their civilian factories for 1080 days and we give them [78.GetName]."
+ww1_romania.117.a:0 "Deal"
+ww1_romania.117.b:0 "We have no use of a puny 5 factories."
 # EVENTS_END
 ## -- IDEAS -- ##
+
 ROM_unionist_zeal:0 "Unionist Zeal"
 ROM_unionist_zeal_desc:0 "Ever since the unification in 1859 the dream of reuniting the romanian people from both sides of the Carphatians and those from over the Prut river has been the nation's dream, a Romania for romanians."
 ROM_industrialization_of_prahova_valley:0 "Industrialization of Prahova Valley"
@@ -1121,7 +1138,6 @@ ROM_black_sea_fleet:0 "The Romanian Black Sea Fleet"
 ROM_defense_of_danube2:0 "Defense of the Danube River"
 ROM_black_sea_fleet2:0 "The Romanian Black Sea Fleet"
 ROM_anti_hungarian_propaganda_idea:0 "Anti-Hungarian Propaganda"
-
 ROM_recently_raided:0 "Recently Raided"
 ROM_unionist_zeal2:0 "Unionist Zeal"
 ROM_occupation_costs_rom:0 "Central Powers Occupation Costs"
@@ -1129,6 +1145,13 @@ ROM_suppressed_hungarian_language:0 "Suppressed Hungarian Language"
 ROM_suppressed_hungarian_language2:0 "Suppressed Hungarian Language"
 ROM_suppressed_hungarian_language_idea_research:0 "Suppressed Hungarian Language"
 ROM_suppressed_hungarian_language_idea_research2:0 "Promoting Romanian Language"
+ROM_bessarabia_compensation:0 "Bessarabia Trade"
+ROM_bessarabia_compensation2:0 "Bessarabia Trade"
+ROM_repair_relations_with_hungary:0 "Restore Diplomatic Ties with Hungary"
+ROM_anti_russian_propaganda_in_bessarabia:0 "Anti-Monarchist Sentiment in [78.GetName]"
+ROM_ask_for_bessarabia_for_civilian_industry:0 "Factories for [78.GetName]"
+
+
 
 
 ## -- DECISIONS -- ##
@@ -1137,7 +1160,6 @@ ROM_national_opposition_desc:0 "Opposition to Carp is widespread across a majori
 ROM_pnl_bad:0 "§Rorganized§! in complete §Ropposition§! to §YCarp§!"
 ROM_pnl_less_bad:0 "§Gcriminalized§!, although §Ractively rioting§! against §YCarp§!"
 ROM_pcd_less_bad:0 "§Gcriminalized§!, although §Ractively rioting§! against §YCarp§!"
-
 ROM_pcd_bad:0 "§Rorganized§!, with the vast majority standing in §Ropposition§! to §YCarp§!"
 ROM_peasants_bad:0 "generally apathetic, neither standing in §Gsupport§! or §Ropposition§!"
 ROM_peasants_ally:0 "§Gsupportive§! of §YCarp§!"
@@ -1146,20 +1168,15 @@ ROM_socialists_bad:0 "Actively §Rprotesting§! against us"
 ROM_old_guard_bad:0 "§ROpposed§! to §YCarp§!"
 ROM_old_guard_crushed:0 "§GPolitically isolated§!"
 ROM_old_guard_ally:0 "begrudgingly §Gaccepting§! of §YCarps§! rule§!"
-
 ROM_socialists_ally:0 "§GSupporting§! §YCarp§!"
 ROM_socialist_crushed:0 "§GNot a source of concern§!"
 ROM_socialist_ally_focus:0 "The §rPDSR§! will become §Gsupportive§!, nullifying an enemy of the government.\nModify §Y'National Opposition§! by:\nStability: §G+10.00%§!"
 ROM_socialist_crush_focus:0 "The §rPDSR§! will become §Gnot a source of concern§!, nullifying an enemy of the government.\nModify §Y'National Opposition§! by:\nPolitical Power Gain: §G+10%§!"
 ROM_ban_pnl_pcd:0 "Both the §lPNL§! and §mPCD§! will become §Gcriminalized§!, although §Ractively rioting§! against §YCarp§!\nModify §Y'National Opposition§! by:\nPolitical Power Gain: §G+15%§!"
-
 ROM_old_guard_crush_focus:0 "The §qOld Guard§! will become §Gpolitically isolated§!, nullifying an enemy of the government.\nModify §Y'National Opposition§! by:\nPolitical Power Gain: §G+5%§!\nStability: §R-10.00%§!"
 ROM_strong_arm_focus:0 "Modify §Y'National Opposition§! by:\nPolitical Power Gain: §G+10%§!"
 ROM_peasant_focus:0 "Modify §Y'National Opposition§! by:\nStability: §G+10.00%§!"
-
-
 ROM_old_guard_ally_focus:0 "The §qOld Guard§! will begrudgingly §Gaccept Carps rule§!, nullifying an enemy of the government.\nModify §Y'National Opposition§! by:\nPolitical Power Gain: §R-5%§!\nStability: §G+15.00%§!"
-
 king_opinion_set_n.tt:0 "The king's opinion of the current government become §YNeutral§!, which gives us:\n£political_power_texticon Daily Political Power Gain: §Y+0.00§!\n£stability_texticon Stability: §Y+0.00%§!"
 king_opinion_set_ha.tt:0 "The king's opinion of the current government become §GVery Positive§!, which gives us:\n£political_power_texticon Political Power Gain: §G+20%§!\n£stability_texticon Stability: §G+12.00%§!"
 ROM_adopt_a_workers_right_plank: "Adopt a Platform on Workers Rights "
@@ -1174,12 +1191,8 @@ ROM_evaluate_chitila:0 "Evaluate Planes at Chitila"
 ROM_chitila_flag:9 "Has Evaluated Planes at Chitila"
 the_great_communicator:0 "The Great Communicator"
 ROM_kings_country_category:0 "The Puppet Master"
-ROM_barbu_delavrancea:0 "Barbu Delavrancea"
-ROM_constantin_arion:0 "Constantin Arion"
-ROM_constantin_motru:0 "Constantin Montru"
 sociologist:0 "Sociologist"
 ROM_unfinished_land_reform_bad:0 "Unfinished Land Reform"
-ROM_constantin_stere:0 "Constantin Stere"
 ROM_second_world_flight:0 "Second Flight in the World"
 establishment_liberal:0 "Establishment Liberal"
 ROM_populist_rhetoric2:0 "Populist Rhetoric"
@@ -1209,7 +1222,10 @@ ROM_armistice_of_focsani_decision:0 "Armistice of Focsani"
 ROM_armistice_of_focsani_decision_desc:0 "Romania can't keep going in the war, we need to peace out and take the loss, recover economically and militarily."
 
 ## -- CHARACTERS -- ##
-
+ROM_barbu_delavrancea:0 "Barbu Delavrancea"
+ROM_constantin_arion:0 "Constantin Arion"
+ROM_constantin_motru:0 "Constantin Montru"
+ROM_constantin_stere:0 "Constantin Stere"
 ROM_carol_i:0 "Carol I"
 ROM_carol_i_desc:0 "King Carol I of Romania, Prince of Hohenzollern-Sigmaringen is a beloved monarch reigning for almost 50 years, he lead his country through the independcy war and  into the 20th century. But now, an old man, over 70 years old, his ties with the german royal family brings nothing but turbulent times ahead."
 ROM_ferdinand_i:0 "Ferdinand I"
@@ -1291,3 +1307,4 @@ ROM_pillage_the_hungarian_border_decision:0 "Pillage the Hungarian Border"
 
 ## -- OTHER -- ##
 ROM_entente_condemned_actions:0 "Condemned action"
+rom_hun_faction:0 "Hungarian Alliance"
