Revert "bukovina/bucovina"
This reverts commit 4357f332b545474775097c8109437a199bab18df.

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -78,7 +78,7 @@
  STATE_77: "Southern Dobruja"
  STATE_78: "Bessarabia"
  STATE_79: "Moldova"
- STATE_80: "Bukovina"
+ STATE_80: "Bucovina"
  STATE_81: "Oltenia"
  STATE_82: "Banat"
  STATE_83: "Western Partium"
@@ -865,7 +865,7 @@
  STATE_864: "Gérardmer"
  STATE_865: "Calais"
  STATE_866: "Southern Carpathians"
- STATE_867: "South Bucovina"
+ STATE_867: "South Bukovina"
  STATE_868: "Eastern Carpathians"
  STATE_869: "Saarland"
  STATE_870: "Shkodër"
