--- a/localisation/english/ww1_romania_l_english.yml
+++ b/localisation/english/ww1_romania_l_english.yml
@@ -547,10 +547,15 @@ ROM_expansion_of_the_coal_industry:0 "Expansion of the Romanian Coal Industry"
 ROM_expansion_of_the_coal_industry_desc:0 "The Romanian coal industry should be ramping up by now, with all the new territories Romania has conquered, especially near the Carpathian Mountains, an area rich with coal."
 ROM_ignore_the_entente_protests:0 "Ignore the Entente's Protests"
 ROM_remove_soviet_hungarian_elements_in_alfold:0 "Remove Soviet Elements in [154.GetName]"
-
+ROM_repair_relations_with_hungary:0 "Restore Diplomatic Ties with Hungary"
+ROM_anti_russian_propaganda_in_bessarabia:0 "Anti-Monarchist Sentiment in [78.GetName]"
+ROM_ask_for_bessarabia_for_civilian_industry:0 "Factories for [78.GetName]"
+ROM_poporanist_education:0 "Poporanist Education System"
+ROM_hostile_takeover_of_government:0 "Hostile Takeover of the Government"
+## FOCUS_END
 
 ## -- TOOLTIPS -- ##
-
+ROM_coup123:0 "§WThis focus will be §W§Gautocompleted§G§W if a §W§YSocialist Coup§Y§W happens"
 hungarian_romanian_war_winner:0 "Winner of the Hungarian-Romanian War"
 hungarian_romanian_war_loser:0 "Loser of the Hungarian-Romanian War"
 ROM_modify_supress_hung.tt:0 "§WModify §W§YSuppressed Hungarian Language§Y§W by \n£manpower_texticon Local manpower:§W§G +10%§G§W"
@@ -664,6 +669,7 @@ ROM_pc_avail:0 "§cPC§! exclusive §YDomestic Focuses§! will become §Gavailab
 ROM_take_ionsecu:0 "Take Ionsecu"
 no_take_until_ROM.tt:0 "The §CKing§! will make a variety of suggestions for our new government. These requests may restrict our ability to do certain actions, but each refusal will §Rlower§! the §CKings§! approval of our government. Once we form a government and the §cP.C§! wins the snap elections, we will be able to take domestic §YFocuses§!."
 complete_bbore:0 "Completing the focus '§YNew Agricultural Techniques§!' will §Gimprove§! the effect of this focus!"
+completing_focus_buff_poporanist.tt:0 "Completing the focus '§YPoporanism§!' will §Gimprove§! the effect of this focus!"
 ROM_all_factions_crushed:0 "There are no politically relevant forces in Romania to oppose this drastic action"
 ROM.4.c.tt:0 "The §cPCD§! will expect us to appoint an §Yadvisor§! from thier party if we win the next elections. If we do not, they will §Cfuse§! with the opposition, leading to its own §Rconsequences§!!"
 kings_gov.tt:0 "This focus will be §Yautocompleted§! if King Carol appoints the §mPCD§! to form a government"
@@ -680,6 +686,7 @@ this_will_lead_war_hungary.tt:0 "§WThis will lead to §W§Rwar§R§W with Hunga
 ROM_enables_secret_ending.tt:0 "§WEnables alternative option to keep [HUN.GetNameWithFlag] in the §W§Revent chain§R§W"
 if_they_accept.tt:0 "If they accept:"
 if_they_refuse.tt:0 "If they refuse:"
+
 ## TOOLTIPS_END ##
 ### -- EVENTS -- ##
 ww1_romania.78.t:0 "The 'Swamp' Demand Protection"
@@ -1147,10 +1154,9 @@ ROM_suppressed_hungarian_language_idea_research:0 "Suppressed Hungarian Language
 ROM_suppressed_hungarian_language_idea_research2:0 "Promoting Romanian Language"
 ROM_bessarabia_compensation:0 "Bessarabia Trade"
 ROM_bessarabia_compensation2:0 "Bessarabia Trade"
-ROM_repair_relations_with_hungary:0 "Restore Diplomatic Ties with Hungary"
-ROM_anti_russian_propaganda_in_bessarabia:0 "Anti-Monarchist Sentiment in [78.GetName]"
-ROM_ask_for_bessarabia_for_civilian_industry:0 "Factories for [78.GetName]"
-
+ROM_gazeta_bucurestilor:0 "Gazeta Bucurestilor"
+ROM_poporanist_education_idea2:0 "Poporanist Education System"
+ROM_poporanist_education_idea1:0 "Poporanist Education System"
 
 
 
