so many huge updates in a row! leaf did you fix your github?

--- a/localisation/english/ww1_romania_l_english.yml
+++ b/localisation/english/ww1_romania_l_english.yml
@@ -14,7 +14,7 @@ ROM_not_we_and_them_but_us:0 "Unity of the 2 Estates"
 ROM_invite_jews:0 "A Safe Haven for the Jews"
 ROM_the_party_of_thieves:0 "The Party of Thieves"
 ROM_advancements_in_plane_technology:0 "Commission Military Aircraft"
-ROM_advancements_in_plane_technology_desc:0 "We need to adapt [ROM.GetName] to the future, including aircraft technology. There are a lot of [ROM.GetAdjective] inventors and aircraft designers ready to take the challenge. We will commission one of them to design for us a plane that can be used for military purposes, in major part to transmit messages across vast lands. The question is who do we ask?"
+ROM_advancements_in_plane_technology_desc:0 "We need to adapt the [ROM.GetName] to the future, including aircraft technology. There are a lot of [ROM.GetAdjective] inventors and aircraft designers ready to take the challenge. We will commission one of them to design for us a plane that can be used for military purposes, in major part to transmit messages across vast lands. The question is who do we ask?"
 ROM_domestic_air_manufactor:0 "Cerchez and Co"
 ROM_domestic_air_manufactor_desc:0 "Domestic production allows us to fulfill the exact needs of our military. We should turn to Cerchez and Co, a Romanian airplane manufacturer in danger of bankruptcy. If the government purchases them we might just be able to build ourself an airforce all by ourselves."
 ROM_sec:0 "Modify §YRomanian Army§! by\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n£attacker_speed_texticon Division Speed: §G+5.00%§!"
@@ -429,7 +429,7 @@ ROM_agricultural_knowledge:0 "New Agricultural Techniques"
 ROM_government_aid_to_industries:0 "Aid Construction of New Factories"
 ROM_move_away_from_an_export_based_economy:0 "Move Away From an Export-Based Economy"
 ROM_doubuja_steel_industry:0 "Moldovan Steel Industry"
-ROM_expand_doubruja_dockyards:0 "Expand Danube Ports"
+ROM_expand_doubruja_dockyards:0 "Expand Dunăre Ports"
 ROM_increase_cereal_exports:0 "Increase Cereal Exports"
 ROM_ramp_up_exports_of_fruit_grains_and_seeds:0 "Ramp Up Exports of Grains Fruits and Seeds"
 ROM_increase_gold_and_silver_exports:0 "Export Gold and Silver"
@@ -490,7 +490,7 @@ ROM_improvements_on_fortifications:0 "Getting With the Times"
 ROM_german_food_exports:0 "German Food Exports"
 ROM_1912_naval_program:0 "Romanian Naval Program"
 ROM_romanian_black_sea_fleet:0 "The Romanian Black Sea Fleet"
-ROM_defend_the_danube:0 "Defend the Danube"
+ROM_defend_the_danube:0 "Defend the Dunăre"
 ROM_law_on_minorities:0 "Romanianization"
 ROM_integration_of_szekelyfold:0 "Integrate [778.GetName]"
 ROM_integration_of_east_alford:0 "Integrate [1020.GetName]"
@@ -552,6 +552,10 @@ ROM_anti_russian_propaganda_in_bessarabia:0 "Anti-Monarchist Sentiment in [78.Ge
 ROM_ask_for_bessarabia_for_civilian_industry:0 "Factories for [78.GetName]"
 ROM_poporanist_education:0 "Poporanist Education System"
 ROM_hostile_takeover_of_government:0 "Hostile Takeover of the Government"
+ROM_flight_school:0 "The 'Aurel Vlaicu' Aviation School"
+ROM_flight_school_desc:0 "Named after the famed Romanian plane engineer Aurel Vlaicu, this school will serve to recruit new pilots for the RAC."
+ROM_conduct_air_bombing_raids:0 "Conduct Air Bombing Raids"
+ROM_conduct_air_bombing_raids_desc:0 "The RAC needs to conduct bombing raids in major enemy cities to weaken their ifnrastructure to give us an advantage in the war."
 ## FOCUS_END
 
 ## -- TOOLTIPS -- ##
@@ -1140,9 +1144,9 @@ ROM_the_natural_enemy_idea:0 "The Natural Enemy"
 ROM_social_welfare_idea:0 "State-Funded Social Welfare"
 ROM_abandon_federalism_idea:0 "Abandon Federalism"
 ROM_1912_naval_program_idea:0 "[ROM.GetAdjective] Naval Program"
-ROM_defense_of_danube:0 "Defense of the Danube River"
+ROM_defense_of_danube:0 "Defense of the Dunăre River"
 ROM_black_sea_fleet:0 "The Romanian Black Sea Fleet"
-ROM_defense_of_danube2:0 "Defense of the Danube River"
+ROM_defense_of_danube2:0 "Defense of the Dunăre River"
 ROM_black_sea_fleet2:0 "The Romanian Black Sea Fleet"
 ROM_anti_hungarian_propaganda_idea:0 "Anti-Hungarian Propaganda"
 ROM_recently_raided:0 "Recently Raided"
