--- a/localisation/english/ww1_bulgaria_l_english.yml
+++ b/localisation/english/ww1_bulgaria_l_english.yml
@@ -36,6 +36,7 @@ BUL_invite_german_rhine_experts:0 "Invite German Rhine Experts"
 BUL_invite_british_midlands_experts:0 "Invite British Midlands Experts"
 BUL_industry_stuff:0 "Process of Industrialization"
 BUL_manuevering_around_the_monopolies:0 "Manuevering Around the Monopolies"
+BUL_purchase_french_recon_planes:0 "Purchase French Recon Planes"
 
 
  ##################
@@ -340,6 +341,7 @@ ww1_BUL_TUR.26.c:0 "Raise Concerns About 'Ottomanization'"
 ww1_BUL_TUR.26.dd:0 "Push for a Macedonian Autonomous State"
 ww1_BUL_TUR.26.e:0 "Cease Negotiations"
 ww1_BUL_TUR.26.f:0 "We’ve Made All Our Points"
+ww1_BUL_TUR.26.g:0 "Push For The Renewal of a Trade Arrangment"
 
 ww1_BUL_TUR.27.t:0 "The Border Refugee Problem"
 ww1_BUL_TUR.27.d:0 "The ongoing refugee crisis along the border presents significant challenges for both nations. What should be our solution for this issue?"
@@ -519,6 +521,13 @@ ww1_BUL_TUR.66.d:0 "Ivan Geshov, the Bulgarian representative, has indicated tha
 ww1_BUL_TUR.66.a:0 "Ok"
 ww1_BUL_TUR.66.b:0 "Cease negotiations"
 
+ww1_BUL_TUR.67.t:0 "Push for the Renewal of The Bulgar-Ottoman Trade Agreement"
+ww1_BUL_TUR.67.d:0 "The Turks may our be oppressors;however, they make up the most of our imports and in 3rd place for our exports. Re-newing our trade arangement would be very generous to both parties."
+ww1_BUL_TUR.67.a:0 "Bring It Up To Mr. Bey"
+
+ww1_BUL_TUR.68.t:0 "Ivan Geshov, Again, Pushes for a Renewal of A Trade Arrangment"
+ww1_BUL_TUR.68.d:0 "Ivan Geshov, since January of 1910, has been pushing for us to renew the trade agreement. We make up the third of Bulgarian exports and most of Bulgarian imports, if we strengthen our trade relations we could economically coherce them into our influence... Oh and it would improve the living standars of Thrace and Macedonia but who cares about them?"
+
  ###Ideas Loc###
  #BULGARIA
 BUL_bdz:0 "BDZ"
@@ -581,7 +590,11 @@ BUL_force_the_farmers_into_factories_idea:0 "Forcing Farmers into Factories"
 BUL_force_the_farmers_into_factories_idea_desc:0 ""
 BUL_TUR_border_chaos:0 "Border Chaos"
 BUL_TUR_border_chaos_dos:0 "Border Chaos"
+BUL_TUR_border_chaos_tres:0 "Border Chaos"
+BUL_TUR_border_chaos_cuatro:0 "Border Chaos"
 BUL_TUR_border_chaos_dos_desc:0 "Border tensions run high between Bulgaria and the Ottoman Empire; The Crisis is fueled by regional ambitions and unrest. The atmosphere is marked by distrust and A growing tension along the Bulgarian-Ottoman Border."
+BUL_TUR_border_chaos_tres_desc:0 "Border tensions run high between Bulgaria and the Ottoman Empire; The Crisis is fueled by regional ambitions and unrest. The atmosphere is marked by distrust and A growing tension along the Bulgarian-Ottoman Border."
+BUL_TUR_border_chaos_cuatro_desc:0 "Border tensions run high between Bulgaria and the Ottoman Empire; The Crisis is fueled by regional ambitions and unrest. The atmosphere is marked by distrust and A growing tension along the Bulgarian-Ottoman Border."
 BUL_TUR_border_chaos_desc:0 "Border tensions run high between Bulgaria and the Ottoman Empire; The Crisis is fueled by regional ambitions and unrest. The atmosphere is marked by distrust and A growing tension along the Bulgarian-Ottoman Border."
 BUL_mediterranean_oportunity:0 "Mediterranean Oportunity"
 BUL_mediterranean_oportunity_desc:0 "" 
