daggie add icons pls

--- a/localisation/english/ww1_romania_l_english.yml
+++ b/localisation/english/ww1_romania_l_english.yml
@@ -10,6 +10,10 @@ ROM_the_carp_constitution:0 "The Carp Constitution"
 ROM_the_carp_constitution_desc:0 "With all enemies of Carp neutralized, we can finally take drastic actions to reorganize the Romanian state. The events of the past year have made it clear Romania must move away from decadent parliamentarism and move towards an all powerful strong ruler, and our new constitution will do just this."
 ROM_balance_the_budget:0 "Balance the Budget"
 ROM_balance_the_budget_desc:0 "Many liberal governments of the past have ran a large deficit. This is fiscally unsustainable, and we must fix it. We shall cut wasteful spending to ensure the have a slight surplus by next year."
+ww1_romania.121.t:0 "Riots in the North"
+ww1_romania.121.d:0 "Our move to ban the PNL and PCD has not gone over smoothly, as rioting has broke out up north, where the PNL base of support is highest. They demand an end to Carps government and the restoration of true democracy in Romania.\n\nThe king has had mixed opinions on the whole thing. While appointingn the fractured PNL would be unwise, there are some fears that Carp will drive the nation towards civil war. Thus, there have been some ideas floating around the crown council about dismissing Carp, and political parties all together. Some see the King as better fit to handle the issues of Romania then the PNL, PCD, and PC, which have all driven the country to its second crisis in the last few years."
+ww1_romania.121.a:0 "Carp is doing fine enough."
+ww1_romania.121.b:0 "Romania has been led by fools for too long!"
 ROM_not_we_and_them_but_us:0 "Unity of the 2 Estates"
 ROM_invite_jews:0 "A Safe Haven for the Jews"
 ROM_the_party_of_thieves:0 "The Party of Thieves"
@@ -1167,6 +1171,7 @@ ROM_poporanist_education_idea1:0 "Poporanist Education System"
 ## -- DECISIONS -- ##
 ROM_national_opposition:0 "National Opposition"
 ROM_national_opposition_desc:0 "Opposition to Carp is widespread across a majority of Romanias political sphere. If we are to avoid being ousted from power then we will need to isolate, ally, or destroy all factions standing in our way, before they do the same to us.\n\nThe §qOld Guard§! is currently: [old_guard_status]\n\nThe §rPDSR§! is currently: [pdsr_status]!\n\nThe §lPNL§! is currently: [pnl_status]\n\nThe §mPCD§! is currently: [pcd_status]\n\nThe §Cpeasants§! are currently: [peasant_status]"
+ROM_king_government:0 "The government is led by the §qKing§! "
 ROM_pnl_bad:0 "§Rorganized§! in complete §Ropposition§! to §YCarp§!"
 ROM_pnl_less_bad:0 "§Gcriminalized§!, although §Ractively rioting§! against §YCarp§!"
 ROM_pcd_less_bad:0 "§Gcriminalized§!, although §Ractively rioting§! against §YCarp§!"
@@ -1180,7 +1185,11 @@ ROM_old_guard_crushed:0 "§GPolitically isolated§!"
 ROM_old_guard_ally:0 "begrudgingly §Gaccepting§! of §YCarps§! rule§!"
 ROM_socialists_ally:0 "§GSupporting§! §YCarp§!"
 ROM_socialist_crushed:0 "§GNot a source of concern§!"
+empowered_ruler:0 "Empowered Ruler"
 ROM_socialist_ally_focus:0 "The §rPDSR§! will become §Gsupportive§!, nullifying an enemy of the government.\nModify §Y'National Opposition§! by:\nStability: §G+10.00%§!"
+ROM_trump:0 "Modify §Y'National Opposition§! by:\nStability: §G+10.00%§!"
+ROM_trump2:0 "Modify §Y'National Opposition§! by:\nPolitical Power Gain: §G+10%§!"
+
 ROM_socialist_crush_focus:0 "The §rPDSR§! will become §Gnot a source of concern§!, nullifying an enemy of the government.\nModify §Y'National Opposition§! by:\nPolitical Power Gain: §G+10%§!"
 ROM_ban_pnl_pcd:0 "Both the §lPNL§! and §mPCD§! will become §Gcriminalized§!, although §Ractively rioting§! against §YCarp§!\nModify §Y'National Opposition§! by:\nPolitical Power Gain: §G+15%§!"
 ROM_old_guard_crush_focus:0 "The §qOld Guard§! will become §Gpolitically isolated§!, nullifying an enemy of the government.\nModify §Y'National Opposition§! by:\nPolitical Power Gain: §G+5%§!\nStability: §R-10.00%§!"
