bukhara/khiva russian subject tree

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -459,9 +459,6 @@ FEU_secure_internal_politics:0 "Secure Internal Politics"
 FEU_strengthen_ruler_position:0 "Strengthen [ROOT.GetLeader]'s Authority"
 FEU_strengthen_feudalism:0 "Strengthen the Feudal System"
 
-
-
-FEU_our_place_in_the_world:0 "Our Place in the World"
 FEU_per_secure_our_independence:0 "Secure our Independence"
 FEU_american_mission:0 "American Mission"
 FEU_american_economic_advisors:0 "American Economic Advisors"
@@ -472,6 +469,7 @@ FEU_per_ottoman_support:0 "Ottoman Support"
 FEU_industrial_machinery:0 "Industrial Machinery"
 FEU_fight_uk:0 "Fight the Entente"
 FEU_persia_capital_arms_workshops:0 "[ROOT.Capital.GetCapitalVictoryPointName] Arms Workshops"
+
 FEU_secure_our_independence:0 "Secure our Independence"
 FEU_agreements_with_britain:0 "Agreements With Britain"
 FEU_seek_british_guarantees:0 "Seek British Guarantees"
@@ -485,6 +483,17 @@ FEU_capital_arms_workshops:0 "[ROOT.Capital.GetCapitalVictoryPointName] Arms Wor
 FEU_purchase_foreign_arms:0 "Purchase Foreign Arms"
 FEU_purchase_foreign_equipment:0 "Purchase Foreign Equipment"
 FEU_purchase_foreign_artillery:0 "Purchase Foreign Artillery"
+
+FEU_loyalty_to_russia:0 "Loyalty to Russia"
+FEU_russian_army_techniques:0 "Russian Army Tactics"
+FEU_import_russian_weapons:0 "Import Russian Weapons"
+FEU_increase_conscription:0 "Expand the Army"
+FEU_russian_development_aid:0 "Russian Development Aid"
+FEU_russian_education:0 "Russian Education"
+FEU_unwavering_loyalty:0 "Unwavering Loyalty"
+FEU_russian_industrial_tech:0 "Russian Industrial Technology"
+FEU_capital_arms_workshops_central_asia:0 "[ROOT.Capital.GetCapitalVictoryPointName] Arms Workshops"
+FEU_foreign_industrial_tech:0 "Foreign Industrial Machinery"
 
 FEU_the_adjective_armed_forces:0 "The [ROOT.GetAdjective] Armed Forces"
 FEU_warrior_tradition:0 "Warrior Tradition"
