--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -1933,6 +1933,8 @@ FEU_strengthened_feudalism:0 "Strengthened Feudalism"
 FEU_fight_the_imperialists_idea:0 "Fighting the Imperialists"
 FEU_fight_the_sick_man_idea:0 "Fighting the Sick Man"
 FEU_fight_the_uk_idea:0 "Fighting the Colonisers"
+FEU_russian_aid_idea:0 "Russian Aid"
+FEU_russian_military_tactics:0 "Russian Tactics"
 
  #UK
  ENG_Staff:0 "English Staff"
